--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -1,8 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Monda:wght@400;700&family=Racing+Sans+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cabin:wght@500&family=Monda:wght@400;700&display=swap');
 
 .navbarContainer {
-  margin-top: -1rem;
-  height: 10vh;
+  height: 9vh;
   background-color: #040018;
   font-family: 'Monda', sans-serif;
   color: rgb(204, 204, 204);
@@ -10,18 +9,24 @@
   justify-content: space-between;
   align-content: center;
   top: 0;
+  position: sticky;
+  z-index: 100;
 }
 
 .logo { 
   padding-left: 3rem;
+  display: flex;
+  align-items: center;
 }
 
 .logoCharacters {
   background: linear-gradient(90deg, rgba(214,162,249,1) 0%, rgba(254,161,161,1) 50%, rgba(250,209,151,1) 100%);
   background-clip: text;
   color: transparent;
-  font-family: 'Racing Sans One', cursive;
-  font-size: 2.4rem;
+  font-family: 'Cabin', sans-serif;
+  font-size: 3rem;
+  margin: 0;
+  
 }
 
 .navbarList {
