--- a/styles/Banner.module.css
+++ b/styles/Banner.module.css
@@ -22,15 +22,21 @@
 .bannerImg {
   position: relative;
   width: 100%;
-  height: 35vh;
-  margin-top: -2rem;
-  background-size: cover;
-  background-position: 100% 35%;
+  height:  32vh;
+  margin-top: -1rem;
+  background-color: transparent;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+  
+  padding: 4rem;
 }
 
 .searchContainer {
+  margin-top:2.5rem;
   display: flex;
-  justify-content: center;
+  justify-content: center; 
+  z-index: 100;
 }
 
 .searchBar {
@@ -38,14 +44,15 @@
   width: 50%;
   height: 6vh;
   border-radius: 6px;
-  background: rgba(255, 255, 255, 0.2);
+  background: rgba(255, 255, 255, 0.45);
   backdrop-filter: blur(30px);
   border: 2px solid transparent;
   background-clip: padding-box;
-  box-shadow: 10px 10px 10px rgba(45,55,68,0.30);
+  box-shadow: 10px 10px 10px rgba(45,55,68,0.3);
   display: flex;
   justify-content:space-evenly;
   align-items: center;
+ z-index: 100;
 }
 
 .searchInput {
