--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -2,7 +2,10 @@
 
 .navbarContainer {
   height: 9vh;
-  background-color: #040018;
+  background: #040018;
+  background: black;
+  background: linear-gradient(180deg,rgb(4, 0, 24, 1), rgb(7, 0, 48, 0.92));
+  
   font-family: 'Monda', sans-serif;
   color: rgb(204, 204, 204);
   display: flex;
@@ -10,7 +13,7 @@
   align-content: center;
   top: 0;
   position: sticky;
-  z-index: 100;
+  z-index: 1000;
 }
 
 .logo { 
