--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -1,17 +1,22 @@
-@import url('https://fonts.googleapis.com/css2?family=Cabin:wght@500&family=Monda:wght@400;700&display=swap');
 
 .navbarContainer {
   height: 9vh;
-  background: linear-gradient(180deg,rgb(4, 0, 24, 1), rgb(7, 0, 48, 0.92));
-  background: #040018;
+  background: #ffffff;
+  box-shadow: 0px 20px 15px -3px rgba(0,0,0,0.1);
   font-family: 'Monda', sans-serif;
-  color: rgb(204, 204, 204);
   display: flex;
   justify-content: space-between;
   align-content: center;
   top: 0;
   position: sticky;
   z-index: 1000;
+}
+
+.logoSearchContainer {
+  width: 65vw;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .logo { 
@@ -21,13 +26,50 @@
 }
 
 .logoCharacters {
+  /*
   background: linear-gradient(90deg, rgba(214,162,249,1) 0%, rgba(254,161,161,1) 50%, rgba(250,209,151,1) 100%);
   background-clip: text;
-  color: transparent;
+  color: transparent; */
   font-family: 'Cabin', sans-serif;
-  font-size: 3rem;
-  margin: 0;
-  
+  font-size: 2.5rem;
+  margin: 0; 
+}
+
+.logoCharacters__begin {
+  font-size: 1.8rem;
+}
+
+.searchContainer {
+  display: flex;
+  justify-content: center; 
+}
+
+.searchBar {
+  margin: 1.5rem;
+  width: 23rem;
+  height: 2.8rem;
+  border-radius: 4px;
+  background: rgb(0, 0, 0);
+  display: flex;
+  justify-content:space-evenly;
+  align-items: center;
+}
+
+.searchInput {
+  border: none;
+  border-radius: 25px;
+  width: 80%;
+  height: 3.5vh;
+  background-color: #fcfcfc;
+  padding-left: 1rem;
+}
+
+.searchIcon:hover {
+  color: white;
+}
+
+.searchIcon:hover {
+  cursor: pointer;
 }
 
 .navbarList {
@@ -38,5 +80,6 @@
 
 .navbarListItem {
   list-style: none;
-  margin: .5rem 2rem 0 0;
+  font-size: .8rem;
+  margin: .2rem 1rem 0 0;
 }
