--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -1,15 +1,16 @@
 
 .navbarContainer {
-  height: 9vh;
+  height: 7rem;
   background: #ffffff;
   box-shadow: 0px 20px 15px -3px rgba(0,0,0,0.1);
   font-family: 'Monda', sans-serif;
   display: flex;
+  
   justify-content: space-between;
   align-content: center;
   top: 0;
   position: sticky;
-  z-index: 1000;
+  z-index: 100;
 }
 
 .logoSearchContainer {
@@ -46,8 +47,8 @@
 }
 
 .searchBar {
-  margin: 1.5rem;
-  width: 23rem;
+  margin: 0.5rem;
+  width: 26rem;
   height: 2.8rem;
   border-radius: 4px;
   background: rgb(0, 0, 0);
@@ -83,5 +84,5 @@
 .navbarListItem {
   list-style: none;
   font-size: .8rem;
-  margin: .2rem 1rem 0 0;
+  margin: 0 1rem 0 0;
 }
