--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -5,7 +5,7 @@
   box-shadow: 0px 20px 15px -3px rgba(0,0,0,0.1);
   font-family: 'Monda', sans-serif;
   display: flex;
-  
+  flex-direction: column;
   justify-content: space-between;
   align-content: center;
   top: 0;
@@ -61,7 +61,7 @@
   border: none;
   border-radius: 25px;
   width: 80%;
-  height: 3.5vh;
+  height: 2rem;
   background-color: #fcfcfc;
   padding-left: 1rem;
   z-index: 5;
