--- a/styles/SignUpIn.module.css
+++ b/styles/SignUpIn.module.css
@@ -24,8 +24,8 @@
   border: 2px solid transparent;
   background-clip: padding-box;
   box-shadow: 10px 10px 10px rgba(45,55,68,0.1);
-  height: 400px;
-  width: 400px;
+  height: 500px;
+  width: 500px;
 }
 
 .form__goBack {
@@ -33,7 +33,7 @@
   cursor: pointer;
   display: flex;
   justify-content: flex-end;
-  margin: -2rem 2rem 0 0;
+  margin: -3rem -3rem 0 0;
   font-weight: 700;
 }
 
@@ -52,12 +52,18 @@
   margin-bottom: 2rem;
 }
 
+.form__forgotpassword {
+  font-size: 0.8rem;
+  padding: 0  0 0 3rem;
+  
+}
+
 .form__labelTitle {
   font-size: 1.1rem;
 }
 
 .form__labelInput {
-  width: 250px;
+  width: 320px;
   height: 25px;
   border-radius: 4px;
   border: none;
