--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,9 +1,5 @@
 .container {
   min-height: 1000vh;
-  background-image: url('/images/mixedcolors.jpg');
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: 29% 0%;
 }
 
 .image__container {
@@ -11,6 +7,7 @@
 }
 
 .title {
+  font-family: 'Abril Fatface', cursive;
   margin-left: 2rem;
 }
 
