--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -2,7 +2,7 @@
 .navbarContainer {
   height: 6rem;
   background: #ffffff;
-  box-shadow: 0px 20px 15px -3px rgba(0,0,0,0.1);
+  border-bottom: 1px solid black;
   font-family: 'Monda', sans-serif;
   display: flex;
   flex-direction: column;
@@ -33,12 +33,13 @@
   background: linear-gradient(90deg, rgba(214,162,249,1) 0%, rgba(254,161,161,1) 50%, rgba(250,209,151,1) 100%);
   background-clip: text;
   color: transparent; */
-  font-family: 'Cabin', sans-serif;
+  font-family: 'Abril Fatface', cursive;
   font-size: 2.5rem;
   margin: 0; 
 }
 
 .logoCharacters__begin {
+  font-family: 'Roboto', sans-serif;
   font-size: 1.8rem;
 }
 
@@ -52,7 +53,7 @@
   width: 26rem;
   height: 2.8rem;
   border-radius: 4px;
-  background: rgb(0, 0, 0);
+  background: rgb(216, 216, 216);
   display: flex;
   justify-content:space-evenly;
   align-items: center;
@@ -70,9 +71,6 @@
 
 .searchIcon:hover {
   color: white;
-}
-
-.searchIcon:hover {
   cursor: pointer;
 }
 
@@ -84,6 +82,7 @@
 }
 
 .navbarListItem {
+  font-family: 'Roboto', sans-serif;
   list-style: none;
   font-size: .8rem;
   margin: 0 0 0 1rem;
