--- a/styles/SignUpIn.module.css
+++ b/styles/SignUpIn.module.css
@@ -1,9 +1,5 @@
 .container {
   min-height: 1000vh;
-  background-image: url('/images/mixedcolors.jpg');
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: 29% 0%;
 
 }
 
@@ -18,12 +14,9 @@
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
-   border-radius: 6px;
-  background: rgba(255, 255, 255, 0.25);
-  backdrop-filter: blur(30px);
-  border: 2px solid transparent;
+  border-radius: 0px;
+  border: 1px solid black;
   background-clip: padding-box;
-  box-shadow: 10px 10px 10px rgba(45,55,68,0.1);
   height: 500px;
   width: 500px;
 }
@@ -65,8 +58,8 @@
 .form__labelInput {
   width: 320px;
   height: 25px;
-  border-radius: 4px;
-  border: none;
+  border-radius: 0px;
+  border: 1px solid black;
   margin-top: .5rem;
 }
 
@@ -74,7 +67,7 @@
   width: 90px;
   height: 30px;
   border: none;
-  border-radius: 4px;
+  border-radius: 0px;
   background-color: black;
   color: white;
   margin: auto;
