--- a/styles/Banner.module.css
+++ b/styles/Banner.module.css
@@ -3,9 +3,9 @@
   position: relative;
   width: 100%;
   height:  32vh;
-  margin-top: 1rem;
+  
   background-color: transparent;
-  background-size: contain;
+  background-size: cover;
   background-repeat: no-repeat;
   background-position: 50% 50%;
   padding: 4rem;
