--- a/styles/Modal.module.css
+++ b/styles/Modal.module.css
@@ -1,7 +1,8 @@
 .modal {
   background: white;
   width: 500px;
-  height: 600px;
+  height: 500px;
+  margin-top: 150px;
   padding: 20px;
   z-index: 100;
 }
@@ -10,6 +11,7 @@
   display: flex;
   justify-content: flex-end;
   font-size: 25px;
+  margin-bottom: 50px;
 }
 
 .body {
@@ -21,9 +23,14 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 200%;
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
   background-color: rgba(0, 0, 0, 0.7);
+}
+
+.title {
+  display: flex;
+  justify-content: center;
 }
