--- a/styles/SignUpIn.module.css
+++ b/styles/SignUpIn.module.css
@@ -1,6 +1,5 @@
 .container {
-  min-height: 100vh;
-
+  min-height: 100vh;  
 }
 
 .form__position {
@@ -9,18 +8,16 @@
 }
 
 .form__container {
-  margin-top: 4rem;
+  margin-top: 0rem;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
   border-radius: 0px;
-  border: 1px solid black;
-  background-clip: padding-box;
-  height: 500px;
+  height: 360px;
   width: 500px;
 }
-
+/*
 .form__goBack {
   width: 400px;
   cursor: pointer;
@@ -28,7 +25,7 @@
   justify-content: flex-end;
   margin: -3rem -3rem 0 0;
   font-weight: 700;
-}
+}*/
 
 .form__title {
   margin: 0rem;
@@ -42,7 +39,7 @@
 .form__label {
   display: flex;
   flex-direction: column;
-  margin-bottom: 2rem;
+  margin-bottom: 1rem;
 }
 
 .form__forgotpassword {
@@ -71,4 +68,13 @@
   background-color: black;
   color: white;
   margin: auto;
+}
+
+.forgot__btn {
+  display: flex;
+  justify-content: flex-end;
+  border: none;
+  margin-bottom: 20px;
+  background-color: transparent;
+  cursor: pointer;
 }
