--- a/styles/CreateRecipe.module.css
+++ b/styles/CreateRecipe.module.css
@@ -2,3 +2,123 @@
   min-height: 1000vh;
 
 }
+
+.container__form {
+    height: 40vh;
+    width: 75vw;
+    background: #ffdce7;
+    
+    border-radius: 15px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;        
+}
+
+.container__title {
+    font-size: 1rem;
+    margin: 2rem;
+    color: #919399;
+    text-shadow: 1px 1px 1px white;
+    
+}
+
+.form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.form__input1 {
+    margin-bottom: 3rem;
+}
+
+.form__inputLabel {
+    padding-right: 2rem;
+}
+
+.form__inputField {
+    border: none;
+    border-radius: 4px;
+    background: #e9e9e9;
+    box-shadow: 3px 3px 5px #ffffff, -3px -3px 5px #797979;
+    width: 25vw;
+    font-size: 1rem;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    padding: .2rem .5rem;
+}
+
+.form__select {
+    width: 42rem;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.form__selectItem {
+    display: flex;
+}
+
+.form__selectField {
+    margin-left: 1rem;
+    height: 1.5rem;
+    font-size: 1rem;
+    border-radius: 1rem;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    border: none;
+    padding: 0 1rem;
+    background: #e9e9e9;
+    box-shadow: 3px 3px 5px #ffffff, -3px -3px 5px #797979;
+}
+
+.form__radioTitle {
+    margin-bottom: 3rem;
+    color: #03045e;
+    text-shadow: 1px 1px 1px white;
+}
+.form__radioField {
+    display: none;
+}
+
+.form__radioField:checked + .form__radioLabel {
+    background:#03045e;
+    color: white;
+}
+
+.form__radioLabel {
+    padding: 8px 14px;
+    margin: 2rem;
+    font-size: 1rem;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color: darkblue;
+    background: linear-gradient(135deg, #d8d8d8, #ffffff);
+    box-shadow: 7px 7px 14px #8e8e8e, -7px -7px 14px #ffffff;
+    border-radius: 5px;
+    height: 14rem;
+    cursor: pointer;
+    transition: background-color 0.1s;
+}
+
+.form__DirectionButtonContainer {
+    display: flex;
+    justify-content: space-evenly;
+    width: 42rem;
+    margin: 3rem;
+}
+
+.form__SubmitButton {
+    height: 50px;
+    width: 200px;
+    color: white;
+    
+    background: rgb(255, 4, 221);
+    box-shadow: 7px 7px 14px #828282, -7px -7px 14px #ffffff;
+    border: none;
+    border-radius: 25px;
+    margin: 3rem 0 1rem;
+    cursor: pointer;
+}
+
+.form__SubmitButton:hover {
+    background: rgb(240, 1, 208);
+}
