--- a/styles/CreateRecipe.module.css
+++ b/styles/CreateRecipe.module.css
@@ -1,5 +1,5 @@
 .container {
-  min-height: 1000vh;
+  min-height: 100vh;
 
 }
 
@@ -16,10 +16,10 @@
 }
 
 .container__title {
-    font-size: 1rem;
+    
     margin: 2rem;
-    color: #919399;
-    text-shadow: 1px 1px 1px white;
+    color: black;
+    
     
 }
 
@@ -39,10 +39,9 @@
 }
 
 .form__inputField {
-    border: none;
-    border-radius: 4px;
-    background: #e9e9e9;
-    box-shadow: 3px 3px 5px #ffffff, -3px -3px 5px #797979;
+    border: solid 1px black;
+    border-radius: 0px;
+    margin-left: 2rem;
     width: 25vw;
     font-size: 1rem;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
@@ -72,28 +71,24 @@
 }
 
 .form__radioTitle {
-    margin-bottom: 3rem;
-    color: #03045e;
-    text-shadow: 1px 1px 1px white;
+    margin: 2rem 3rem;
+    
 }
 .form__radioField {
     display: none;
 }
 
 .form__radioField:checked + .form__radioLabel {
-    background:#03045e;
-    color: white;
+    color: #5fc349;
 }
 
 .form__radioLabel {
     padding: 8px 14px;
     margin: 2rem;
     font-size: 1rem;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    color: darkblue;
-    background: linear-gradient(135deg, #d8d8d8, #ffffff);
-    box-shadow: 7px 7px 14px #8e8e8e, -7px -7px 14px #ffffff;
-    border-radius: 5px;
+    font-weight: 600;
+    color: black;
+    font-size: 30px;
     height: 14rem;
     cursor: pointer;
     transition: background-color 0.1s;
@@ -111,14 +106,14 @@
     width: 200px;
     color: white;
     
-    background: rgb(255, 4, 221);
-    box-shadow: 7px 7px 14px #828282, -7px -7px 14px #ffffff;
+    background: black;
+    
     border: none;
     border-radius: 25px;
-    margin: 3rem 0 1rem;
+    margin: 3rem 2rem 1rem;
     cursor: pointer;
 }
 
 .form__SubmitButton:hover {
-    background: rgb(240, 1, 208);
+    background: #5fc349;
 }
