--- a/styles/ProfileImage.module.css
+++ b/styles/ProfileImage.module.css
@@ -1,11 +1,8 @@
 .avatar {
-  
   border-radius: 50%;
-  
-  margin: auto 0;
+  margin: auto 20px;
   align-self: center;
 }
-
 
 .ProfileImageContainer {
   display: flex;
@@ -20,6 +17,7 @@
     padding: 6px 12px;
     cursor: pointer;
     margin: 2rem;
+    width: 350px;
 }
 
 .buttonContainer {
@@ -27,7 +25,7 @@
 }
 
 .button {
-  width: 120px;
+  width: 160px;
   height: 30px;
   border: none;
   border-radius: 0px;
