--- a/styles/CreateRecipe.module.css
+++ b/styles/CreateRecipe.module.css
@@ -1,37 +1,29 @@
 .container {
   min-height: 100vh;
-
 }
 
-.container__form {
-    height: 40vh;
-    width: 75vw;
-    background: #ffdce7;
-    
-    border-radius: 15px;
+.form__container {
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;        
+    align-items: center;
+    margin: auto 0;   
 }
 
+
 .container__title {
-    
-    margin: 2rem;
-    color: black;
-    
-    
+    margin: 3rem;   
 }
 
 .form {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items: center; 
+    background-color: #5fc349;
 }
 
 .form__input1 {
-    margin-bottom: 3rem;
+    margin-bottom: 1rem;
 }
 
 .form__inputLabel {
