--- a/styles/CreateRecipe.module.css
+++ b/styles/CreateRecipe.module.css
@@ -11,7 +11,7 @@
 
 
 .container__title {
-    margin: 3rem  0 1rem 3rem;  
+    margin: 1.5rem  0 1rem 3rem;  
 }
 
 .label {
@@ -128,6 +128,7 @@
 
 .form__radioField:checked + .form__radioLabel {
     color: #5fc349;
+    
 }
 
 .form__radioLabel {   
@@ -201,5 +202,12 @@
 }   
     
 .image__dish {
-    margin: 1rem;
+    margin-bottom: 1rem;
+}
+
+.form__submitContainer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
