--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -15,12 +15,17 @@
   margin: 0;
 }
 
+.section__title {
+  margin-left: 2rem;
+}
+
 .recipe__listitems {
   list-style: none;
   padding: 1rem;
   margin: 0.5rem;
   border: 1px solid;
   max-width: 220px;
+  border-radius: 4px;
 }
 
 .recipe__list {
@@ -33,4 +38,9 @@
 
 .recipe__category {
   font-size: 0.8rem;
+}
+
+.rec.rec-arrow {
+    border-radius: 0;
+    color: red;
 }
