--- a/styles/CreateRecipe.module.css
+++ b/styles/CreateRecipe.module.css
@@ -6,7 +6,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: auto 0;   
+    margin: auto 0; 
+    padding: 6rem; 
 }
 
 
@@ -26,6 +27,7 @@
     justify-content: center;
     align-items: center; 
     background-color: #5fc349;
+    
 }
 
 .form__input1 {
