--- a/styles/RecipeDetail.module.css
+++ b/styles/RecipeDetail.module.css
@@ -56,3 +56,13 @@
 .method {
   margin-top: 2rem;
 }
+
+.rating {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.ratingTitle {
+  text-align: center;
+}
