--- a/styles/Comment.module.css
+++ b/styles/Comment.module.css
@@ -4,11 +4,88 @@
 
 .profileContainer {
   width: 10vw;
+  height: 35px;
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-start;
   align-items: center;
+  margin-right: 40px;
+}
+
+.profileNameInput {
+  font-size: .8rem;
+  font-weight: bold;
+  color: #5fc349;
+  margin-left: 1rem;
 }
 
 .profileName {
   font-size: .8rem;
+  font-weight: bold;
+  margin-left: 1rem;
+}
+
+.commentContainer {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  margin-left: 100px;
+  
+  background-color: rgb(239, 239, 239);
+  margin: 5px;
+  border-radius: 3px;
+  padding: 10px;
+}
+
+.commentContainerInput {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  margin-left: 100px;
+  margin: 5px;
+  padding-left: 15px;
+}
+
+.commentForm {
+  height: 100%;
+}
+
+.inputComment {
+    border: none; 
+    border-bottom: solid 1px grey;
+    width: 500px;
+    height: 100%;
+    font-size: .8rem;
+    color: #5fc349;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    padding: .2rem;
+}
+
+.inputComment:focus {
+    outline: none;
+}
+
+.showComment {
+  
+    width: 500px;
+    height: 100%;
+    font-size: .8rem;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    padding: 0;
+    margin: 0;
+    
+}
+
+.commentButton {
+    height: 20px;
+    width: 75px;
+    color: white;
+    background: black;
+    border: none;
+    border-radius: 25px;
+    margin: 1rem 2rem 1rem;
+    cursor: pointer;
+}
+
+.commentButton:hover {
+  background: #5fc349;
 }
