--- a/styles/RecipeDetail.module.css
+++ b/styles/RecipeDetail.module.css
@@ -29,9 +29,9 @@
 }
 
 .ingredients__listItemAmount {
-  width: 50px;
+  width: 10%;
   height: 1rem;
-  margin: 0 10px 0;
+  margin: 0 5px 0;
   text-align: end;
 }
 
@@ -50,7 +50,7 @@
 }
 
 .allergens__item {
-  margin-right: 1rem;
+  margin-right: .5rem;
 }
 
 .method {
@@ -65,4 +65,8 @@
 
 .ratingTitle {
   text-align: center;
+}
+
+.comments {
+  margin-top: 3rem;
 }
