--- a/styles/Comment.module.css
+++ b/styles/Comment.module.css
@@ -1,5 +1,6 @@
 .avatar {
   border-radius: 50%;
+  
 }
 
 .profileContainer {
@@ -28,8 +29,6 @@
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  margin-left: 100px;
-  
   background-color: rgb(239, 239, 239);
   margin: 5px;
   border-radius: 3px;
@@ -40,9 +39,10 @@
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  margin-left: 100px;
   margin: 5px;
-  padding-left: 15px;
+  padding-left: 10px;
+  border: 1px solid rgb(223, 223, 223);
+  border-radius: 3px;
 }
 
 .commentForm {
@@ -52,12 +52,10 @@
 .inputComment {
     border: none; 
     border-bottom: solid 1px grey;
-    width: 500px;
+    width: 50vw;
     height: 100%;
     font-size: .8rem;
-    color: #5fc349;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    padding: .2rem;
 }
 
 .inputComment:focus {
@@ -66,7 +64,7 @@
 
 .showComment {
   
-    width: 500px;
+    width: 100%;
     height: 100%;
     font-size: .8rem;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
@@ -88,4 +86,21 @@
 
 .commentButton:hover {
   background: #5fc349;
+}
+
+.heartContainer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 20px;
+  margin: 2rem .4rem;
+}
+
+.filledHeart {
+  font-size: 16px;
+  vertical-align: text-bottom;
+}
+
+.inputHeart {
+  color: #5fc349; 
 }
