--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -1,10 +1,11 @@
 .footer__container {
   background-color: rgb(216, 216, 216);
-  height: 120px;
+  height: 100%;
   width: 100vw;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
+  margin: 4rem 0 0 0;
 }
 
 .footer__list {
@@ -19,6 +20,6 @@
 .footer__github {
   display: flex;
   justify-content: center;
-  padding-bottom: 1rem;
+  padding-bottom: .5rem;
   font-size: .8rem;
 }
