--- a/styles/ModalEditRecipe.module.css
+++ b/styles/ModalEditRecipe.module.css
@@ -1,10 +1,11 @@
 .modal {
   background: white;
-  width: 500px;
-  height: 500px;
-  margin-top: 150px;
-  padding: 20px;
+  width: 80vw;
+  
+  margin-top: 10vh;
+  padding: 40px;
   z-index: 100;
+  border-radius: 5px;
 }
 
 .header {
