--- a/styles/CreateRecipe.module.css
+++ b/styles/CreateRecipe.module.css
@@ -90,6 +90,10 @@
     margin-left: 2rem;
 }
 
+.IngredientsButton:hover {
+  cursor: pointer;
+}
+
 .form__select {
     width: 42rem;
     display: flex;
