--- a/styles/Weekplanner.module.css
+++ b/styles/Weekplanner.module.css
@@ -8,7 +8,7 @@
   border: 1px solid black;
   border-radius: 5px;
   text-align: center;
-  margin: 0 auto;
+  margin: 1rem auto;
 }
 
 .recipe__list {
