--- a/styles/Weekplanner.module.css
+++ b/styles/Weekplanner.module.css
@@ -3,12 +3,14 @@
 }
 
 .planning__container {
-  height: 40vh;
+  height: 100%;
+  min-height: 220px;
   width: 80vw;
   border: 1px solid black;
   border-radius: 5px;
   text-align: center;
   margin: 1rem auto;
+  
 }
 
 .recipe__list {
@@ -32,4 +34,10 @@
 
 .recipe__category {
   font-size: 0.8rem;
+}
+
+.targetContainer {
+  min-width: 250px;
+  min-height: 250px;
+  border: 5px red solid;
 }
