--- a/styles/Weekplanner.module.css
+++ b/styles/Weekplanner.module.css
@@ -73,3 +73,23 @@
   min-height: 250px;
   border: 5px red solid;
 }
+
+.searchBar {
+  width: 26rem;
+  height: 2rem;
+  border-radius: 16px;
+  padding: 12px;
+  display: flex;
+  justify-content:space-evenly;
+  align-items: center;
+}
+
+.searchBar:focus {
+  outline: none;
+}
+
+
+.searchBarContainer {
+  display: flex;
+  justify-content: center; 
+}
