--- a/styles/EditRecipe.module.css
+++ b/styles/EditRecipe.module.css
@@ -116,7 +116,8 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin: 3rem 0;
+  align-items: center;
+  margin: auto 0;
 }
 
 .imageButtonContainer {
