--- a/styles/Weekplanner.module.css
+++ b/styles/Weekplanner.module.css
@@ -23,7 +23,7 @@
 }
 .planning__containerButton {
   display: flex;
-  justify-content: flex-end;
+  justify-content: center;
   align-items: flex-end;
   height: 100%;
   margin: 0;
