--- a/styles/CreateRecipe.module.css
+++ b/styles/CreateRecipe.module.css
@@ -139,10 +139,10 @@
 }
 
 .form__radioLabel {   
-    margin: 0 2rem;
+    margin: 0 1rem;
     font-weight: 600;
     color: black;
-    font-size: 30px;
+    font-size: 1.4rem;
     cursor: pointer;
     transition: background-color 0.1s;
 }
