--- a/styles/Filter.module.css
+++ b/styles/Filter.module.css
@@ -1,37 +1,34 @@
 .instruction {
-  font-size: .7rem;
-  color: rgb(138, 138, 138);
+	font-size: 0.7rem;
+	color: rgb(138, 138, 138);
 }
 
 .allergenContainer {
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  width: 70vw;
-  margin-left: 2rem;
+	display: flex;
+	justify-content: center;
+	flex-wrap: wrap;
+	width: 70vw;
+	margin-left: 2rem;
 }
 
 .form__radioField {
-    display: none;
+	display: none;
 }
 
 .form__radioFieldContainer {
-  
-    display: flex;
-    flex-wrap: wrap;
-    
+	display: flex;
+	flex-wrap: wrap;
 }
 
 .form__radioField:checked + .form__radioLabel {
-    color: #5fc349;
-    
+	color: #5fc349;
 }
 
-.form__radioLabel {   
-    margin: 0 .5rem;
-    font-weight: 600;
-    color: black;
-    font-size: 14px;
-    cursor: pointer;
-    transition: background-color 0.1s;
+.form__radioLabel {
+	margin: 0 0.5rem;
+	font-weight: 600;
+	color: black;
+	font-size: 14px;
+	cursor: pointer;
+	transition: background-color 0.1s;
 }
