--- a/styles/Weekplanner.module.css
+++ b/styles/Weekplanner.module.css
@@ -6,25 +6,44 @@
   margin-left: 2rem;
   color: #5fc349;
 }
+
+.dnd__container {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  margin-top: 2rem;
+}
+
 .planning__container {
-  height: 100%;
-  min-height: 220px;
-  width: 80vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  flex-wrap: wrap;
+  min-height: 300vh;
+  width: 45vw;
   border: 1px solid black;
   border-radius: 5px;
   text-align: center;
   margin: 1rem auto;
-  
+}
+
+.instruction {
+	font-size: 0.7rem;
+	color: rgb(138, 138, 138);
+	margin: 0,2;
+  height: 50px;
 }
 
 .planning__containerTitle {
   margin: 1rem;
   font-weight: 600;
 }
+
 .planning__containerButton {
   display: flex;
   justify-content: center;
-  align-items: flex-end;
+  align-items: flex-start;
   height: 100%;
   margin: 0;
 }
@@ -47,7 +66,9 @@
 
 .recipe__list {
   display: flex;
+  justify-content: flex-start;
   flex-wrap: wrap;
+  width: 45vw;
 }
 .recipe__listitems {
   display: flex;
@@ -68,12 +89,6 @@
   font-size: 0.8rem;
 }
 
-.targetContainer {
-  min-width: 250px;
-  min-height: 250px;
-  border: 5px red solid;
-}
-
 .searchBar {
   width: 22rem;
   height: 1.8rem;
@@ -92,12 +107,19 @@
 .searchBarContainer {
   margin: 0 auto;
   display: flex;
-  justify-content: center; 
+  justify-content: space-between; 
   align-items: center;
+  padding: 0 12px;
   width: 26rem;
   height: 2rem;
   border-radius: 16px;
   border: black 1px solid;
+}
+
+.dnd__container {
+  display: flex;
+  width: 95vw;
+  justify-content: center;
 }
 
 .shoppingList {
@@ -107,3 +129,4 @@
 .shoppingList__check {
   margin-right: 0.5rem;
 }
+
